# zen-mapper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  flake.nix  justfile  license  pyproject.toml
.github/workflows/: check.yml  docs.yml  flake.yml  lint.yml  publish-kaiju.yml  publish-zen.yml  publish.yml  test.yml
docs/source/: .gitignore  conf.py  index.md  index.rst  modules.rst  zen_mapper.rst
docs/source/decisions/: 0001-cluster-interface.md
examples/: basic.py  cluster_metadata_animation.py  custom_clusterer.py  custom_cover.py  logging.py
nix/: kaiju-mapper.nix  overlay.nix  sphinx-gallery.nix  zen-mapper.nix
nix/templates/minimal/: flake.nix
nix/uv/: default.nix
src/zen_mapper/: __init__.py  adapters.py  cluster.py  cover.py  komplex.py  simplex.py  test_adapters.py  test_cluster.py  test_cover.py  test_komplex.py  test_mapper.py  test_simplex.py
templates/minimal/: flake.nix
