[project]
name = "zen-mapper"
version = "0.1.0"
description = "Mapper without the noise"
authors = [
    { name = "Ethan Rooke", email = "pypi@ethan.roo.ke" }
]
dependencies = [
    "numpy>=1.26.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
    "ruff>=0.0.292",
    "pytest>=7.4.2",
    "hypothesis[numpy]>=6.87.4",
]

[tool.rye.scripts]
format = { chain = ["format:black", "format:ruff"]}
"format:black" = "black ."
"format:ruff" = "ruff check src --fix"
test = "pytest ."

[tool.ruff]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zen_mapper"]
exclude = ["src/**/test*.py"]
