[project]
name = "zen-mapper"
version = "0.1.3"
description = "Mapper without the noise"
license = "ISC"
authors = [
    { name = "Ethan Rooke", email = "pypi@ethan.roo.ke" }
]
dependencies = [
    "numpy>=1.25.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.urls]
"Homepage" = "https://github.com/zen-mapper/zen-mapper"
"Bug Tracker" = "https://github.com/zen-mapper/zen-mapper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
    "ruff>=0.0.292",
    "pytest>=7.4.2",
    "hypothesis[numpy]>=6.87.4",
    "scikit-learn>=1.3.1",
    "sphinx>=7.2.6",
    "myst-parser>=2.0.0",
    "networkx>=3.2",
]

[tool.rye.scripts]
docs = "sphinx-apidoc -f -o docs/source src '**/test_*.py' "

lint = { chain = ["lint:black", "lint:ruff"] }
"lint:black" = "black --check ."
"lint:ruff" = "ruff check src"

format = { chain = ["format:black", "format:ruff"]}
"format:black" = "black ."
"format:ruff" = "ruff check src --fix"

test = "pytest ."

[tool.ruff]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zen_mapper"]
exclude = ["src/**/test*.py"]
