[project]
name = "zen-mapper"
version = "0.1.5"
description = "Mapper without the noise"
license = "ISC"
authors = [
    { name = "Ethan Rooke", email = "pypi@ethan.roo.ke" }
]
dependencies = [
    "numpy>=1.25.0",
    'typing-extensions; python_version < "3.11"',
]
readme = "README.md"
requires-python = ">= 3.10"

[project.urls]
"Homepage" = "https://github.com/zen-mapper/zen-mapper"
"Bug Tracker" = "https://github.com/zen-mapper/zen-mapper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zen_mapper"]
exclude = ["src/**/test*.py"]
